@@ -393,7 +393,7 @@ body {
 .chatMembersOverlay {
     display:none;
 }
-.bannedUsersOverlay {
+.modDisplayOverlay {
     display:none;
 }
 
