@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div id="chatContentWindow" class="chatContent">
-                        <div id="modDisplay" class="bannedUsersOverlay slide-in-blurred-top">
+                        <div id="modDisplay" class="modDisplayOverlay slide-in-blurred-top">
                             <div class="membersList card my-3">
                               <div class="card-header bg-primary"><b>Banned Users</b></div>
                               <div id="OutcastList" class="card-body"></div>
