@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div id="chatContentWindow" class="chatContent">
-                            <div id="modDisplay" class="bannedUsersOverlay">
+                            <div id="modDisplay" class="modDisplayOverlay">
                                 <div class="membersList card my-3">
                                   <div class="card-header bg-primary"><b>Banned Users</b></div>
                                   <div id="OutcastList" class="card-body"></div>
