@@ -6,6 +6,7 @@ OSP-Core: Refactored OSP-Core Startup Processes
 OSP-Core: Refactored OSP-APIv1 into Namespaces
 OSP-Core: Changed BanList Display Panel ID from bannedUsers to modDisplay in channeplayer.html
 OSP-Core: Changed Ban List Display Button ID from banListButton to modDisplayButton and onclick from openBanList() to openModDisplay() in channelplayer.html
+OSP-Core: Changed banListOverlay CSS Class to modDisplayOverlay in channelplayer.html and theme.css files
 OSP-Core: API Change - Moved /channel/authed/<channelLoc> into /channel/<channelLoc> and added option for optional authenticated view using api-key
 
 0.8.3
